// Vitest Snapshot v1

exports[`Login with signup disabled > matches snapshot in en 1`] = `
<div
  class="page auth login"
  data-v-98aa2ee3=""
>
  <h1
    data-v-98aa2ee3=""
  >
    Login 
    <!---->
  </h1>
  <div
    class="toolbar"
    data-v-98aa2ee3=""
  >
    
    
  </div>
  
  <!--v-if-->
  
  
  <form
    class="form auth-form"
    novalidate=""
  >
    <div
      class="field email"
    >
      <label
        for="email"
      >
        Your email
      </label>
      
      <input
        class=""
        name="email"
        tabindex="0"
        type="email"
      />
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Your password
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <!---->
      
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
        tabindex="0"
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Sign in
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  <div
    class="links"
  >
    <!--v-if-->
    <a
      class="reset"
    >
      Forgot password
    </a>
  </div>
  
</div>
`;

exports[`Login with signup disabled > matches snapshot in fr 1`] = `
<div
  class="page auth login"
  data-v-98aa2ee3=""
>
  <h1
    data-v-98aa2ee3=""
  >
    Connexion 
    <!---->
  </h1>
  <div
    class="toolbar"
    data-v-98aa2ee3=""
  >
    
    
  </div>
  
  <!--v-if-->
  
  
  <form
    class="form auth-form"
    novalidate=""
  >
    <div
      class="field email"
    >
      <label
        for="email"
      >
        Votre adresse mail
      </label>
      
      <input
        class=""
        name="email"
        tabindex="0"
        type="email"
      />
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Votre mot de passe
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <!---->
      
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
        tabindex="0"
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Connexion
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  <div
    class="links"
  >
    <!--v-if-->
    <a
      class="reset"
    >
      Mot de passe oublié
    </a>
  </div>
  
</div>
`;
